feat: implemented base routes, middleware, infrastructure.
