# internals/delivery/http/routing/http_routes.go
@@ -2,21 +2,28 @@ package routing
 
 import (
 	"github.com/go-chi/chi/v5"
+	"gostarter/infra/config"
 	"gostarter/internals/delivery/http/api"
+	"gostarter/internals/delivery/http/middleware"
 	"gostarter/internals/service"
 	"gostarter/internals/storage/memory"
-	"net/http"
 )
 
-func SetupRoutes(routing chi.Router) {
-	routing.Get("/health", func(w http.ResponseWriter, r *http.Request) {
-		w.WriteHeader(http.StatusOK)
-		_, _ = w.Write([]byte("OK"))
-	})
+func SetupRoutes(cfg *config.Config) func(r chi.Router) {
+	return func(r chi.Router) {
+		tokenService := service.NewTokenService(cfg.JWT)
 
-	accountRepo := memory.NewAccountRepository()
-	accountService := service.NewAccountService(accountRepo)
-	accountHandler := api.NewAccountHandler(accountService)
+		accountRepo := memory.NewAccountRepository()
+		accountService := service.NewAccountService(accountRepo)
+		accountHandler := api.NewAccountHandler(accountService, tokenService)
 
-	routing.Post("/v1/auth/register", accountHandler.Register)
+		r.Post("/v1/auth/register", accountHandler.Register)
+		r.Post("/v1/auth/login", accountHandler.Login)
+
+		r.Group(func(r chi.Router) {
+			r.Use(middleware.JWTAuthMiddleware(tokenService))
+			r.Post("/v1/auth/logout", accountHandler.Logout)
+			r.Get("/v1/auth/profile", accountHandler.Profile)
+		})
+	}
 }
